test/sema/typeck/pattern/struct-type-mismatch.dora
struct Foo(Int64, String)
struct Bar(Int64, String)
fn f(x: Foo): Int64 {
    let Bar(a, b) = x;
    b
}
